[package]
name = "rust_atomic_lock"
version = "0.1.0"
edition = "2021"

## ss_1

[[bin]]
name = "thread"
path = "src/ss_1/thread.rs"

[[bin]]
name = "thread_scope"
path = "src/ss_1/thread_scope.rs"

[[bin]]
name = "thread_static"
path = "src/ss_1/thread_static.rs"

[[bin]]
name = "mutable"
path = "src/ss_1/mutable.rs"

[[bin]]
name = "mutex"
path = "src/ss_1/mutex.rs"

[[bin]]
name = "thread_parking"
path = "src/ss_1/thread_parking.rs"

[[bin]]
name = "condvar"
path = "src/ss_1/condvar.rs"

## ss_2

[[bin]]
name = "stop_flag"
path = "src/ss_2/stop_flag.rs"

[[bin]]
name = "progress_report"
path = "src/ss_2/progress_report.rs"

[[bin]]
name = "progress_report_park"
path = "src/ss_2/progress_report_park.rs"

[[bin]]
name = "fetch_and_modify"
path = "src/ss_2/fetch_and_modify.rs"

[[bin]]
name = "progress_report_4_thread"
path = "src/ss_2/progress_report_4_thread.rs"

[[bin]]
name = "statistic_value"
path = "src/ss_2/statistic_value.rs"

[[bin]]
name = "fetch_add"
path = "src/ss_2/fetch_add.rs"

[dependencies]
