[package]
name = "rust_atomic_lock"
version = "0.1.0"
edition = "2021"

## ss_1

[[bin]]
name = "thread"
path = "src/ss_1/thread.rs"

[[bin]]
name = "thread_scope"
path = "src/ss_1/thread_scope.rs"

[[bin]]
name = "thread_static"
path = "src/ss_1/thread_static.rs"

[[bin]]
name = "mutable"
path = "src/ss_1/mutable.rs"

[[bin]]
name = "mutex"
path = "src/ss_1/mutex.rs"

[[bin]]
name = "thread_parking"
path = "src/ss_1/thread_parking.rs"

[[bin]]
name = "condvar"
path = "src/ss_1/condvar.rs"

## ss_2

[[bin]]
name = "stop_flag"
path = "src/ss_2/stop_flag.rs"

[[bin]]
name = "progress_report"
path = "src/ss_2/progress_report.rs"

[[bin]]
name = "progress_report_park"
path = "src/ss_2/progress_report_park.rs"

[[bin]]
name = "fetch_and_modify"
path = "src/ss_2/fetch_and_modify.rs"

[[bin]]
name = "progress_report_4_thread"
path = "src/ss_2/progress_report_4_thread.rs"

[[bin]]
name = "statistic_value"
path = "src/ss_2/statistic_value.rs"

[[bin]]
name = "fetch_add"
path = "src/ss_2/fetch_add.rs"

[[bin]]
name = "init_lazy"
path = "src/ss_2/init_lazy.rs"

[[bin]]
name = "compare_exchange"
path = "src/ss_2/compare_exchange.rs"

## ss_3

[[bin]]
name = "happen_before_relation"
path = "src/ss_3/happen_before_relation.rs"

[[bin]]
name = "happen_before_relation_2"
path = "src/ss_3/happen_before_relation_2.rs"

[[bin]]
name = "relaxed_ordering"
path = "src/ss_3/relaxed_ordering.rs"

[[bin]]
name = "release_acquire_ordering"
path = "src/ss_3/release_acquire_ordering.rs"

[[bin]]
name = "release_acquire_ordering_2"
path = "src/ss_3/release_acquire_ordering_2.rs"

[[bin]]
name = "release_acquire_ordering_lock"
path = "src/ss_3/release_acquire_ordering_lock.rs"

[[bin]]
name = "release_acquire_ordering_init"
path = "src/ss_3/release_acquire_ordering_init.rs"

[[bin]]
name = "seq_cst"
path = "src/ss_3/seq_cst.rs"

[[bin]]
name = "release_acquire_fence"
path = "src/ss_3/release_acquire_fence.rs"

## ss_4

[[bin]]
name = "spinlock_unsafe"
path = "src/ss_4/spinlock_unsafe.rs"

## ss_5

[[bin]]
name = "channel_simple"
path = "src/ss_5/channel_simple.rs"

[[bin]]
name = "channel_one_shot"
path = "src/ss_5/channel_one_shot.rs"

[[bin]]
name = "channel_one_shot_save_mem"
path = "src/ss_5/channel_one_shot_save_mem.rs"

[[bin]]
name = "channel_one_shot_type"
path = "src/ss_5/channel_one_shot_type.rs"

[[bin]]
name = "channel_one_shot_ref"
path = "src/ss_5/channel_one_shot_ref.rs"

## ss_7

[[bin]]
name = "load_billion"
path = "src/ss_7/load_billion.rs"

[[bin]]
name = "load_billion_thread"
path = "src/ss_7/load_billion_thread.rs"

[[bin]]
name = "load_billion_thread_2"
path = "src/ss_7/load_billion_thread_2.rs"

[[bin]]
name = "load_3_variable"
path = "src/ss_7/load_3_variable.rs"

[[bin]]
name = "load_3_variable_2"
path = "src/ss_7/load_3_variable_2.rs"

[[bin]]
name = "experiment_ordering"
path = "src/ss_7/experiment_ordering.rs"

## ss_8

[[bin]]
name = "futex"
path = "src/ss_8/futex.rs"

## ss_9

[[bin]]
name = "mutex_perf"
path = "src/ss_9/mutex_perf.rs"

[[bin]]
name = "mutex_4thread_perf"
path = "src/ss_9/mutex_4thread_perf.rs"

## examples

[[example]]
name = "factor_mp"
path = "examples/factor_mp.rs"

[dependencies]
atomic-wait = "1"
libc = "0.2.156"
rand = "0.8.5"
